syntax = "proto3";

import "mouse_control.proto";

message TypingControl {

  enum KeyboardAction {
    //option allow_alias = true;
    Confirm = 0;
    LeaveTyping = 1;
    OpenMenu = 2;
    CursorLeft = 3;
    CursorRight = 4;
    CursorUp = 5;
    CursorDown = 6;
    UiLeft = 7;
    UiRight = 8;
    UiUp = 9;
    UiDown = 10;
    Backspace = 11;
    Delete = 12;
    Shift = 13;
    Copy = 14;
    Cut = 15;
    Paste = 16;
    Home = 17;
    End = 18;
    Insert = 19;
    Enter = 20;
    Select_All = 21;
    Save = 22;
    Undo = 23;
    Redo = 24;
    
    //ctrlc = 14;
    //ctrlx = 15;
    //ctrlv = 16;
    //ctrla = 21;
    //ctrls = 22;
    //ctrly = 24;
    //ctrlz = 23;
  }

  repeated int32 tier1 = 1;
  repeated int32 tier2 = 2;
  
  enum ActiveWhen
  {
    Pressed = 0;
    Held = 1;
    Released = 2;
    Stayed = 3;
  }
  
  message KeyboardActionContainer {
    KeyboardAction binding = 1;
    ActiveWhen when_active = 2;
  }
  
  map<int32,KeyboardActionContainer> bindings = 3;
  KeyboardSet base = 4;
  map<int32,KeyboardSet> keyboard_select = 5;
  
  
  Stick left_stick = 6;
  Stick right_stick = 7;
  
  Trigger left_trigger = 8;
  Trigger right_trigger = 9;
  
  string name = 10;
  string description = 11;
}

message KeyboardSet {
  message StringChoice {
    string display = 1;
    repeated string subset = 2;
  }
  int32 count = 1;
  int32 subcount = 2;
  repeated StringChoice set = 3;
  string name = 4;
  string description = 5;
}